# dac2021-submission

./: README.md
FlexNLP/: README.md
FlexNLP/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
FlexNLP/s1_i_time/Top/: axi_commands_for_2_lstm_64x64.txt  axi_commands_for_attention.csv  testbench.cpp
FlexNLP/s1_i_time/ac_include/: ac_array.h  ac_channel.h  ac_matlab.h  ac_matrix.h  mc_comparator.h  mc_reset.h  mc_sc.h  mc_transactors.h
FlexNLP/s1_i_time/cmod/: cmod_Makefile
FlexNLP/s1_v_time/: run.sh
FlexNLP/s1_v_time/Top/: instr_log_lstm.txt  testbench.cpp
FlexNLP/s1_v_time/ac_include/: ac_blackbox.h  ac_int.h  ac_sync.h
FlexNLP/s2/: run.sh
FlexNLP/s2/Top/: Makefile  testbench.cpp  (+1 more)
FlexNLP/s2/sim_model/: CMakeLists.txt
FlexNLP/s2/sim_model/src/: idu_CONFIG_GB_CORE_MEM_MNGR_SMALL.cc  idu_GB_ZEROPADDING_START.cc  idu_PE0_CORE_STORE_WEIGHT_BUFFER.cc  idu_PE0_act_child_op_copy.cc  idu_PE0_core_out.cc  idu_PE0_core_run_mac_out_6.cc  idu_PE1_ACT_STORE_BUFFER.cc  idu_PE1_CONFIG_ACT_VECTOR_16_31.cc  idu_PE1_CONFIG_MEM_MNGR_FIRST.cc  idu_PE1_act_child_op_inpe.cc  idu_PE1_act_child_op_sigm.cc  idu_PE1_act_child_reg_store.cc  idu_PE1_core_is_start.cc  idu_PE1_core_run_mac_data_c.cc  idu_PE1_core_run_mac_data_nc.cc  idu_PE1_core_run_mac_out_10.cc  idu_PE1_core_run_mac_out_14.cc  idu_PE1_core_run_mac_out_2.cc  idu_PE2_act_child_op_eadd.cc  idu_PE2_act_child_op_emul.cc  idu_PE2_act_child_op_onex.cc  idu_PE2_core_bias.cc  idu_PE2_core_is_start.cc  idu_PE2_core_read_gb.cc  idu_PE2_core_run_mac_data_c.cc  idu_PE2_core_run_mac_data_nc.cc  idu_PE2_core_run_mac_out_13.cc  idu_PE2_core_run_mac_out_6.cc  idu_PE2_core_run_mac_out_9.cc  idu_PE3_ACT_STORE_BUFFER.cc  idu_PE3_CONFIG_ACT_MNGR.cc  idu_PE3_act_child_do_incr.cc  idu_PE3_act_child_op_onex.cc  idu_PE3_act_child_reg_store.cc  idu_PE3_core_run_mac_data_c.cc  idu_PE3_core_run_mac_out_13.cc  idu_PE3_core_run_mac_out_3.cc  idu_PE3_core_run_mac_out_5.cc  idu_gb_attention_child_bmm_mv.cc  idu_gb_attention_child_bmm_tp.cc  (+12 more)
FlexNLP/s3/: run.sh
aes-block/: README.md
aes-block/include/: aes_ila.h
aes-block/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
aes-block/s1/: CMakeLists.txt
aes-block/s1/app/: tandem-aes.cc
aes-block/s1/include/: AES.h
aes-block/s1/src/: AES_WRITE_ADDRESS.cc  compute.cc  decode_AES_GET_STATUS.cc  decode_AES_START_ENCRYPT.cc  decode_AES_WRITE_COUNTER.cc  init_AES_BLOCK.cc  uninterpreted_func.cc
aes-block/s1/verilog/: reg16byte.v
aes-block/s2/: CMakeLists.txt  run.sh
aes-block/s3/: run.sh  wr_csv.py
aes-block/src/: aes_128.cc  aes_child.cc  aes_ila.cc  aes_util.cc
aes-block/verilog/: aes_top.v
aes-round/: README.md
aes-round/app/: main.cc
aes-round/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
aes-round/s1/: CMakeLists.txt  run.sh
aes-round/s1/app/: tandem-aes.cc
aes-round/s1/impl/: AES_CTR_TOP.cc
aes-round/s1/impl/include/: AES_rtl.h
aes-round/s1/src/: AES_BLOCK_LOAD.cc  AES_GET_STATUS.cc  AES_READ_ADDRESS.cc  AES_tandem.cc  compute.cc  decode_AES_BLOCK_LOAD.cc  decode_AES_BLOCK_OPERATE.cc  decode_AES_WRITE_ADDRESS.cc
aes-round/s1/src/include/: AES.h
aes-round/s2/: run.sh
aes-round/s4/: run.sh
gb/: README.md
gb/app/: main.cc
gb/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
gb/s1/: CMakeLists.txt  run.sh  wr_csv_v.py
gb/s1/app/: tandem-gb.cc
gb/s1/include/: GBHigh_ila.h  GBHigh_rtl.h
gb/s1/src/: CMakeLists.txt  GBHigh.cc  GBHigh.h  GBHigh_tandem.cc  Propagate_prop0.cc  compute.cc  decode_Propagate_prop0.cc
gb/s2/: CMakeLists.txt  run.sh  wr_csv_i.py
gb/s3/: run.sh
gb/s4/: CMakeLists.txt  run.sh
gb/s4/app/: tandem-gb.cc
gb/s4/include/: GBHigh.h  GBHigh_ila.h  GBHigh_rtl.h
gb/s4/src/: GBHigh.cc  GBHigh_Read.cc  GBHigh_tandem.cc  compute.cc
gb/s4/verilog/: FIFO_hls_target_p_p2_in_bounded_stencil_stream_s.v  hls_target_Loop_1_proc.v  hls_target_call_Loop_LB2D_buf_proc_buffer_0_value_V.v  hls_target_linebuffer_Loop_1_proc.v
gb/src/: gb_high.cc
piccolo/: README.md
piccolo/include/: helpers.hpp
piccolo/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
piccolo/s1/: run.sh  wr_csv.py
piccolo/s2/: CMakeLists.txt  run.sh
piccolo/s2/app/: tandem-piccolo.cc
piccolo/s2/include/: piccolo_ila.h  piccolo_rtl.h
piccolo/s2/src/: decode_riscv_SUB.cc  riscv_AUIPC.cc  riscv_ORI.cc
piccolo/s2/verilog/: RegFile.v
piccolo/s3/: run.sh
piccolo/s4/: run.sh
pico/: README.md
pico/app/: main.cc
pico/include/: encoding.hpp  helpers.hpp  riscvIla.hpp
pico/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
pico/s1/: run.sh
pico/s2/: run.sh
pico/s3/: run.sh
pico/s4/: CMakeLists.txt  run.sh
pico/s4/app/: tandem-pico.cc
pico/s4/include/: riscv_ila.h
pico/s4/src/: compute.cc  decode_riscv_BLTU.cc  decode_riscv_LW.cc  decode_riscv_OR.cc  riscv.h  riscv_AND.cc  riscv_BLT.cc
pico/s4/verilog/: picorv32_simple.v
rocket/: README.md
rocket/app/: main.cc
rocket/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
rocket/s1/: run.sh
rocket/s2/: run.sh
rocket/s3/: run.sh  wr_csv.py
rocket/s4/: CMakeLists.txt  run.sh
rocket/s4/app/: tandem-rocket.cc
rocket/s4/include/: riscv_ila.h
rocket/s4/src/: CMakeLists.txt  decode_riscv_BLT.cc  decode_riscv_JALR.cc  decode_riscv_SH.cc  decode_riscv_SLT.cc  decode_riscv_SRL.cc  riscv.h  riscv_BEQ.cc  riscv_JALR.cc
rocket/s4/verilog/: ALU.v  AXI4Buffer_1.v  AXI4Fragmenter.v  AXI4IdIndexer_1.v  AsyncQueueSink.v  AsyncQueueSource_2.v  AsyncResetRegVec_w1_i0.v  BankBinder.v  BroadcastFilter.v  CLINT.v  ClockCrossingReg_w15.v  ClockCrossingReg_w55.v  ClockGroupAggregator.v  ClockGroupAggregator_1.v  CoherenceManagerWrapper.v  DCache.v  DivSqrtRawFN_small.v  FPToFP.v  FixedClockBroadcast.v  Frontend.v  ICache.v  IntSyncSyncCrossingSink_1.v  IntXing.v  LevelGateway.v  MulAddRecFNToRaw_postMul.v  OptimizationBarrier.v  PLICFanIn.v  PeripheryBus_1.v  Queue_11.v  Queue_16.v  Queue_17.v  Queue_27.v  Queue_28.v  Queue_35.v  Queue_37.v  RVCExpander.v  Repeater.v  Repeater_2.v  Repeater_4.v  Rocket.v  (+30 more)
rocket/src/: riscvIla.cc
(+770 files in other folders)
